Added sharing sample and structure of privileges

--- a/sharing.csv.sample
+++ b/sharing.csv.sample
@@ -1,4 +1,6 @@
-UUID,ALL,APHA,DEFRA,EA
-5ad3a06b-049d-4404-b383-a2919e6ce295,t,t,t,t
-7910a2bf-aa5b-49b3-96c7-1815f424c646,f,f,t,t
-7910a2bf-aa5b-49b3-96c7-1815f424c646,t,f,f,t
+UUID,GROUP,VIEW,DOWNLOAD,DYNAMIC,FEATURED,NOTIFY,EDITING
+5ad3a06b-049d-4404-b383-a2919e6ce295,128,TRUE,FALSE,FALSE,FALSE,FALSE,FALSE
+5ad3a06b-049d-4404-b383-a2919e6ce295,139,TRUE,FALSE,FALSE,FALSE,FALSE,FALSE
+7910a2bf-aa5b-49b3-96c7-1815f424c646,128,TRUE,TRUE,TRUE,TRUE,TRUE,TRUE
+7910a2bf-aa5b-49b3-96c7-1815f424c646,139,TRUE,TRUE,TRUE,TRUE,TRUE,TRUE
+7910a2bf-aa5b-49b3-96c7-1815f424c646,0,TRUE,TRUE,TRUE,TRUE,TRUE,TRUE
