--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
 certifi==2018.10.15
 chardet==3.0.4
+Click==7.0
 idna==2.7
+numpy==1.15.4
+pandas==0.23.4
 pkg-resources==0.0.0
+python-dateutil==2.7.5
+pytz==2018.7
 requests==2.20.0
+six==1.11.0
 urllib3==1.24
