--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 certifi==2018.10.15
 chardet==3.0.4
 Click==7.0
+colorama==0.4.0
 idna==2.7
+lxml==4.2.5
 numpy==1.15.4
 pandas==0.23.4
 pkg-resources==0.0.0
