Error handling for sharing module and sample values to trigger errors in sharing.csv.sample

--- a/sharing.csv.sample
+++ b/sharing.csv.sample
@@ -5,3 +5,4 @@ UUID,GROUP,VIEW,DOWNLOAD,DYNAMIC,FEATURED,NOTIFY,EDITING
 7910a2bf-aa5b-49b3-96c7-1815f424c646,DEFRA,TRUE,TRUE,TRUE,TRUE,FALSE,TRUE
 7910a2bf-aa5b-49b3-96c7-1815f424c646,intranet,TRUE,TRUE,TRUE,TRUE,TRUE,FALSE
 7910a2bf-aa5b-49b3-96c7-1815f424c646,Environment Agency,TRUE,TRUE,TRUE,TRUE,TRUE,FALSE
+bah,Environment Agency,TRUE,TRUE,TRUE,TRUE,TRUE,FALSE
