--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ idna==2.7
 lxml==4.2.5
 numpy==1.15.4
 pandas==0.23.4
-#pkg-resources==0.0.0
+pkg-resources==0.0.0
 python-dateutil==2.7.5
 pytz==2018.7
 requests==2.20.0
