--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,9 @@ lxml==4.2.5
 nose==1.3.7
 numpy==1.15.4
 pandas==0.23.4
-#pkg-resources==0.0.0
+pkg-resources==0.0.0
+psycopg2==2.7.7
+psycopg2-binary==2.7.7
 python-dateutil==2.7.5
 pytz==2018.7
 requests==2.20.0
