--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,16 @@
+arrow==0.13.1
+backports.functools-lru-cache==1.5
 certifi==2019.3.9
 chardet==3.0.4
+charset==1.0.1
 Click==7.0
-colorama==0.4.1
+emaildata==0.3.4
 idna==2.8
-lxml==4.3.3
-nose==1.3.7
 numpy==1.16.3
 pandas==0.24.2
 pkg-resources==0.0.0
-psycopg2==2.7.7
-psycopg2-binary==2.8.2
 python-dateutil==2.8.0
 pytz==2019.1
+requests==2.22.0
 six==1.12.0
-urllib3==1.24.2
-requests==2.21.0
+urllib3==1.25.2
