--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,10 @@ pytz==2019.1
 requests==2.31.0
 six==1.12.0
 urllib3==1.26.18
+Jinja2==2.7.3
+MarkupSafe==0.23
+argparse==1.2.1
+psycopg2==2.6
+nose==1.3.7
+mock==1.3.0
+testing.postgresql==1.2.1
