--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,13 @@
-arrow==0.15.1
-backports.functools-lru-cache==1.5
-certifi==2023.7.22
-chardet==3.0.4
-charset==1.0.1
-Click==7.0
-emaildata==0.3.4
-idna==2.8
-numpy==1.22.0
-pandas==0.24.2
-pkg-resources==0.0.0
-python-dateutil==2.8.0
-pytz==2019.1
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+idna==3.6
+numpy==1.26.3
+pandas==2.2.0
+pyarrow==15.0.0
+python-dateutil==2.8.2
+pytz==2024.1
 requests==2.31.0
-six==1.12.0
-urllib3==1.26.18
-Jinja2==2.7.3
-MarkupSafe==0.23
-argparse==1.2.1
-psycopg2==2.6
-nose==1.3.7
-mock==1.3.0
-testing.postgresql==1.2.1
+six==1.16.0
+tzdata==2023.4
+urllib3==2.2.0
