--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ click==8.1.7
 idna==3.6
 numpy==1.26.3
 pandas==2.2.0
+psycopg2-binary==2.9.9
 pyarrow==15.0.0
+pyscopg2==66.0.2
 python-dateutil==2.8.2
 pytz==2024.1
 requests==2.31.0
