--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 idna==3.6
+Jinja2==3.1.3
+MarkupSafe==2.1.5
 numpy==1.26.3
 pandas==2.2.0
 psycopg2-binary==2.9.9
