--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ click==8.1.7
 idna==3.6
 Jinja2==3.1.3
 MarkupSafe==2.1.5
+mock==5.1.0
+nose==1.3.7
 numpy==1.26.3
 pandas==2.2.0
 psycopg2-binary==2.9.9
@@ -13,5 +15,6 @@ python-dateutil==2.8.2
 pytz==2024.1
 requests==2.31.0
 six==1.16.0
+testing.postgresql==1.3.0
 tzdata==2023.4
 urllib3==2.2.0
